<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<artifactId>android-sdk</artifactId>
	<groupId>com.mobeelizer</groupId>
	<version>1.7.0-SNAPSHOT</version>
	<name>Mobeelizer SDK</name>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<github.global.server>github</github.global.server>
	</properties>
	<dependencies>
		<dependency>
			<groupId>com.mobeelizer</groupId>
			<artifactId>java-common</artifactId>
			<version>1.8.0-SNAPSHOT</version>
			<exclusions>
				<exclusion>
					<groupId>org.apache.httpcomponents</groupId>
					<artifactId>httpcore</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.apache.httpcomponents</groupId>
					<artifactId>httpclient</artifactId>
				</exclusion>
				<exclusion>
					<groupId>commons-logging</groupId>
					<artifactId>commons-logging</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.json</groupId>
					<artifactId>json</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>com.google.android</groupId>
			<artifactId>android</artifactId>
			<version>2.2.1</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.google.android</groupId>
			<artifactId>android-test</artifactId>
			<version>2.2.1</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.8.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.powermock</groupId>
			<artifactId>powermock-module-junit4</artifactId>
			<version>1.4.11</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.powermock</groupId>
			<artifactId>powermock-api-mockito</artifactId>
			<version>1.4.11</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-all</artifactId>
			<version>1.9.0</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<sourceDirectory>target/filtered-sources/java</sourceDirectory>
		<resources>
			<resource>
				<directory>src/main/java/</directory>
				<includes>
					<include>com/mobeelizer/mobile/android/Mobeelizer.java</include>
				</includes>
				<filtering>true</filtering>
				<targetPath>../filtered-sources/java</targetPath>
			</resource>
			<resource>
				<directory>src/main/java/</directory>
				<excludes>
					<exclude>com/mobeelizer/mobile/android/Mobeelizer.java</exclude>
				</excludes>
				<filtering>true</filtering>
				<targetPath>../filtered-sources/java</targetPath>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.8.1</version>
				<configuration>
					<show>public</show>
					<doctitle>Mobeelizer Android SDK</doctitle>
					<notree>true</notree>
					<nohelp>true</nohelp>
					<noindex>true</noindex>
					<use>false</use>
					<packagesheader><![CDATA[<a href="http://www.mobeelizer.com"><img src="http://unbouncepages-com.s3.amazonaws.com/www.mobeelizer.com/mobeelizer.original.jpg" /></a>]]></packagesheader>
					<bottom><![CDATA[Copyright &#169; 2011-{currentYear} <a href="http://www.mobeelizer.com" target="_blank">Mobeelizer Ltd</a>. All Rights Reserved.]]></bottom>
					<excludePackageNames>com.mobeelizer.mobile.android.model:com.mobeelizer.mobile.android.search:com.mobeelizer.mobile.android.types:com.mobeelizer.mobile.android.sync:com.mobeelizer.mobile.android.definition:com.mobeelizer.java.connection:com.mobeelizer.java.definition:com.mobeelizer.java.file:com.mobeelizer.java.model:com.mobeelizer.java.sync:com.mobeelizer.java.api.user</excludePackageNames>
					<includeDependencySources>true</includeDependencySources>
					<dependencySourceIncludes>
						<dependencySourceInclude>com.mobeelizer:*</dependencySourceInclude>
					</dependencySourceIncludes>
				</configuration>
				<executions>
					<execution>
						<id>javadoc-jar</id>
						<phase>package</phase>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.2</version>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-eclipse-plugin</artifactId>
				<version>2.9</version>
				<configuration>
					<downloadSources>true</downloadSources>
					<downloadJavadocs>true</downloadJavadocs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.1.2</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<phase>deploy</phase>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-deploy-plugin</artifactId>
				<version>2.7</version>
				<executions>
					<execution>
						<id>deploy</id>
						<phase>deploy</phase>
						<goals>
							<goal>deploy</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.12</version>
				<configuration>
					<argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=512m</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>1.5</version>
				<configuration>
					<artifactSet>
						<excludes>
							<exclude>junit:junit</exclude>
						</excludes>
					</artifactSet>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-antrun-plugin</artifactId>
				<version>1.7</version>
				<configuration>
					<target>
						<taskdef name="s3upload" classname="dak.ant.taskdefs.S3Upload" classpathref="maven.plugin.classpath" />
						<copy file="${basedir}/target/${project.artifactId}-${releaseVersion}.jar" tofile="${basedir}/target/mobeelizer-android-sdk.jar" />
						<copy file="${basedir}/target/${project.artifactId}-${releaseVersion}-javadoc.jar" tofile="${basedir}/target/mobeelizer-android-sdk-javadoc.jar" />
						<s3upload verbose="true" accessId="${accessId}" secretKey="${secretKey}" bucket="sdk.mobeelizer.com" publicRead="true">
							<fileset dir="${basedir}/target/" includes="mobeelizer-*.jar" />
						</s3upload>
						<s3upload verbose="true" accessId="${accessId}" secretKey="${secretKey}" bucket="sdk.mobeelizer.com" publicRead="true" prefix="android/">
							<fileset dir="${basedir}/target/apidocs/" includes="**/*" />
						</s3upload>
					</target>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>thirdparty</groupId>
						<artifactId>awstasks</artifactId>
						<version>0.3</version>
					</dependency>
				</dependencies>
			</plugin>
			<plugin>
				<groupId>com.github.github</groupId>
				<artifactId>downloads-maven-plugin</artifactId>
				<version>0.6</version>
				<configuration>
					<description>${project.version} release of ${project.name}</description>
					<override>true</override>               
				</configuration>
			</plugin>
			<plugin>
			    <groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>2.3</version>
				<configuration>
					<goals>deploy antrun:run ghDownloads:upload</goals>
					<arguments>-DreleaseVersion=${releaseVersion} -DaccessId=${accessId} -DsecretKey=${secretKey}</arguments>
				</configuration>			    
			</plugin>
		</plugins>
	</build>

	<pluginRepositories>
		<pluginRepository>
			<id>conjars</id>
			<url>http://conjars.org/repo/</url>
		</pluginRepository>
		<pluginRepository>
			<id>qcadoo-snapshots-repository</id>
			<url>http://nexus.qcadoo.org/content/repositories/snapshots</url>
		</pluginRepository>
		<pluginRepository>
			<id>qcadoo-releases-repository</id>
			<url>http://nexus.qcadoo.org/content/repositories/releases</url>
		</pluginRepository>
	</pluginRepositories>

	<repositories>
		<repository>
			<id>qcadoo-releases-repository</id>
			<url>http://nexus.qcadoo.org/content/repositories/releases</url>
			<releases>
				<enabled>true</enabled>
				<updatePolicy>never</updatePolicy>
			</releases>
			<snapshots>
				<enabled>false</enabled>
				<updatePolicy>never</updatePolicy>
			</snapshots>
		</repository>
		<repository>
			<id>qcadoo-snapshots-repository</id>
			<url>http://nexus.qcadoo.org/content/repositories/snapshots</url>
			<releases>
				<enabled>false</enabled>
				<updatePolicy>never</updatePolicy>
			</releases>
			<snapshots>
				<enabled>true</enabled>
				<updatePolicy>interval:5</updatePolicy>
			</snapshots>
		</repository>
	</repositories>

	<distributionManagement>
		<repository>
			<id>qcadoo-releases-repository</id>
			<url>http://nexus.qcadoo.org/content/repositories/releases</url>
		</repository>
		<snapshotRepository>
			<id>qcadoo-snapshots-repository</id>
			<url>http://nexus.qcadoo.org/content/repositories/snapshots</url>
		</snapshotRepository>
	</distributionManagement>

	<scm>
	    <connection>scm:git:ssh://github.com/mobeelizer/android-sdk.git</connection>
        <developerConnection>scm:git:git@github.com:mobeelizer/android-sdk.git</developerConnection>
        <url>http://github.com/mobeelizer/android-sdk</url>
    <tag>HEAD</tag>
  </scm>
  
</project>
